--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/react-router-dom": "5.3.3",
+    "axios": "0.27.2",
     "bootstrap": "5.3.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
