--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/jwt-decode": "3.1.0",
+    "@types/qs": "6.9.7",
     "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "5.3.3",
     "axios": "0.27.2",
     "bootstrap": "5.3.0",
+    "jwt-decode": "3.1.2",
     "node-sass": "^9.0.0",
+    "qs": "6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
