--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
-    "react-router-dom": "6.4.1"
+    "react-router-dom": "6.4.1",
+    "react-select": "5.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
